--- a/nodejs-docs-samples/package.json
+++ b/nodejs-docs-samples/package.json
@@ -31,5 +31,8 @@
     "eslint-plugin-prettier": "^3.0.0",
     "nyc": "13.1.0",
     "prettier": "^1.15.2"
+  },
+  "dependencies": {
+    "express": "^4.16.4"
   }
 }
