--- a/Project/src/main/webapp/WEB-INF/web.xml
+++ b/Project/src/main/webapp/WEB-INF/web.xml
@@ -7,4 +7,15 @@
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
+  
+  <filter>
+    <filter-name>HttpsFilter</filter-name>
+    <filter-class>com.somendu.common.filter.HttpsFilter</filter-class>
+  </filter>
+  
+  <filter-mapping>
+    <filter-name>HttpsFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
 </web-app>
